tests/NormalTests/paczka2/big_fuzzy/39636058.err
Error in line 1: o8aB S832 74,0
Error in line 14: CPXso S832 70,7
Error in line 18: 1fCS2 A616 6,0
Error in line 19: CPXso A956 83,1
Error in line 31: TADhP A616 62,â
Error in line 30: TADhP A616 99,1
Error in line 35: o8aB A956 126,1
Error in line 40: o8aB S832 32,1
Error in line 41: o8aB A956 23,7
Error in line 51: o8aB S654 1,6
Error in line 39: A616 S654 6,4
Error in line 60: Poa A616 14,7
Error in line 62: TADhP S654 58,4
Error in line 32: CPXso S832 126,3
Error in line 73: CPXso S654 495,5
Error in line 77: CPXso A956 84,0
Error in line 94: RfyiD S832 54,2
Error in line 113: o8aB S654 58,1
Error in line 106: A616 S654 174,2
Error in line 116: TADhP A616 141,4
Error in line 119: Poa S654 72,3
Error in line 134: CPXso S654 20,9
Error in line 151: Poa A616 15,0
Error in line 140: o8aB A616 24,5
Error in line 170: 1fCS2 A616 143,2
Error in line 179: TADhP A956 11,2
Error in line 155: Poa S654 78,9
Error in line 184: o8aB S654 41,7
Error in line 185: TADhP S832 30,5
Error in line 200: RfyiD S832 23,7
Error in line 199: 1fCS2 S654 67,7
Error in line 209: 1fCS2 A956 70,6
Error in line 212: CPXso A616 24,3
Error in line 216: o8aB A956 8,7
Error in line 220: RfyiD A956 189,10
Error in line 228: TADhP S832 43,1
Error in line 232: CPXso A616 63,7
Error in line 234: CPXso A956 5,2
Error in line 214: RfyiD A956 71,6
Error in line 243: CPXso A956 41,9
